@@ -1,0 +1,3 @@
+env=Environment()
+libname=ARGUMENTS.get('libname', 'foo')
+env.SharedLibrary('myshared', ['main.c'], LIBS=[libname], LIBPATH='.')
